[gd_scene load_steps=5 format=3 uid="uid://cgahp3u800h1w"]

[ext_resource type="Script" uid="uid://c3qpj58w2xb7j" path="res://scenes/ui/ability_detail.gd" id="1_b6msy"]
[ext_resource type="Texture2D" uid="uid://b4rvoo21nr8kj" path="res://assets/sprite_sheets/elements_icons.png" id="1_iixw0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xt3ok"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.219253, 0.101498, 0.0142199, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="AtlasTexture" id="AtlasTexture_ghgjp"]
atlas = ExtResource("1_iixw0")
region = Rect2(0, 0, 12, 12)

[node name="AbilityDetail" type="PanelContainer"]
theme_override_styles/panel = SubResource("StyleBoxFlat_xt3ok")
script = ExtResource("1_b6msy")
sheet = ExtResource("1_iixw0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="AbilityName" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
text = "miaou"

[node name="MainElement" type="TextureRect" parent="VBoxContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AtlasTexture_ghgjp")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 30

[node name="Elements" type="HBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="Description" type="Label" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
text = "Description"

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer3/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer3/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Damage"

[node name="DamageLabel" type="Label" parent="VBoxContainer/MarginContainer3/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Damage"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer3/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/MarginContainer3/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Range"

[node name="RangeLabel" type="Label" parent="VBoxContainer/MarginContainer3/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Range"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/MarginContainer3/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer/MarginContainer3/HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Aoe damage"

[node name="AoeDamage" type="Label" parent="VBoxContainer/MarginContainer3/HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Aoe damage"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2

[node name="EffectDetail" type="Label" parent="VBoxContainer/MarginContainer3/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Effect details"
